fastrace-macro/tests/ui/err/properties-non-string.stderr
error: expected string literal
 --> tests/ui/err/properties-non-string.rs:5:24
  |
5 | #[trace(properties = { a: "b" })]
  |                        ^
